Stop erratic initial movement of ticker. Align ticker with main div.

--- a/src/app/stylesheets/meta-rating.component.scss
+++ b/src/app/stylesheets/meta-rating.component.scss
@@ -1,4 +1,3 @@
-
 // VARIABLES
 $default-delay: 1s;
 $bars: 3;
@@ -13,7 +12,7 @@ $graph-width: 300px;
   background-image: linear-gradient($direction, $color-light 0%, $color-light 47%, $color-dark 50%, $color-dark 100%);
 }
 
-
+//Animation Mixin
 @mixin bar-animation-zero-height($time, $dimension) {
   visibility: visible;
 
@@ -51,7 +50,7 @@ $graph-width: 300px;
   }
 }
 
-@-moz-keyframes animate-height {
+@-moz-keyframes animate-zero-height {
   100% {
     visibility: hidden;
   }
@@ -59,8 +58,8 @@ $graph-width: 300px;
     height: 0;
   }
 }
-//STYLES
 
+//STYLES
 .stat-1 {
   @include stat-bar(#178cba, #178cba, to right, left);
 }
@@ -84,27 +83,28 @@ $graph-width: 300px;
   }
 
   .bar-group {
+    overflow: hidden;
+    position: relative;
     display: block;
     opacity: 0.4;
-    height: 70%;
-    position: relative;
+    height: 70%;//keep for Safari!
     width: 100%;
     margin-bottom: 20px;
     font-size: .6em;
     .bar {
       @include bar-animation-zero-height($default-delay, height);
-      border: 1px solid #000;
+      border: 1px solid #333;
       border-radius: 3px 3px 0 0;
       bottom: 0;
       cursor: pointer;
       position: absolute;
       text-align: center;
-      width: 35%;
+      width: $graph-width/3;
       &:nth-child(2) {
-        left: 35%;
+        left: ($graph-width/3);
       }
       &:nth-child(3) {
-        left: 70%;
+        left: ($graph-width/3)*2;
       }
       span {
        display: block;
@@ -113,8 +113,29 @@ $graph-width: 300px;
        color: #000;
       }
     }
-
+    @for $i from 1 through 3 {
+      .stat-#{$i} {
+        animation-delay: $default-delay+.2*$i;
+        -webkit-animation-delay: $default-delay+.2*$i;
+      }
+    }
   }
+
+  #rating-labels {
+    div {
+      width: 220px;
+      position: relative;
+      margin: 0 0 20px;
+      span {
+        position: relative;
+        float: left;
+        height: 15px;
+        width: 15px;
+        opacity: 0.4;
+      }
+    }
+  }
+
   ul {
     list-style: none;
     margin: 0;
@@ -145,21 +166,6 @@ $graph-width: 300px;
         display: block;
         font-size: 1em;
         width: 40px;
-      }
-    }
-  }
-
-  #rating-labels {
-    div {
-      width: 220px;
-      position: relative;
-      margin: 0 0 20px;
-      span {
-        position: relative;
-        float: left;
-        height: 15px;
-        width: 15px;
-        opacity: 0.4;
       }
     }
   }
